[package]
name = "statime-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
clap = { version = "4.4.2", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
libc = { version = "0.2.147", features = ["extra_traits"] }
log = "0.4.20"
statime = { path = "../statime" }
pin-project-lite = "0.2.13"
toml = ">=0.5.0,<0.8.0"
tokio = { version = "1.32", features = ["net", "rt-multi-thread", "time", "macros", "sync"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
serde = { version = "1.0.188", features = ["derive"] }


clock-steering = { git = "https://github.com/pendulum-project/clock-steering.git", rev = "3ab6721" }
timestamped-socket = { git =  "https://github.com/pendulum-project/timestamped-socket.git", rev = "95c2472", features = ["serde"] }
