[package]
name = "statime"
version = "0.1.0"
authors = ["Dion Dokter <dion@tweedegolf.com>", "Ruben Nijveld <ruben@tweedegolf.com>", "David Venhoek <david@tweedegolf.com>", "Bram Bruines <bram@tweedegolf.com"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Pure rust implementation of a ptp ordinary clock"
homepage = "https://github.com/tweedegolf/statime"
repository = "https://github.com/tweedegolf/statime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
fixed = "1.11.0"
getset = "0.1.2"
log = { version = "0.4.14", default-features = false }
num_enum = { version = "0.5.1", default-features = false }
libm = "0.1.2"

[dev-dependencies]
thiserror = "1.0.30"
