[package]
name = "statime"
version = "0.1.0"
authors = [
    "Dion Dokter <dion@tweedegolf.com>",
    "Ruben Nijveld <ruben@tweedegolf.com>",
    "David Venhoek <david@tweedegolf.com>",
    "Bram Bruines <bram@tweedegolf.com>",
    "Rick van der Wal <rick@tweedegolf.com>"
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Pure rust implementation of a ptp ordinary clock"
homepage = "https://github.com/tweedegolf/statime"
repository = "https://github.com/tweedegolf/statime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
embassy-futures = "0.1.0"
fixed = "1.23"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
getset = "0.1.2"
libm = "0.2.6"
log = { version = "0.4.14", default-features = false }
num_enum = { version = "0.6.1", default-features = false }
pin-project = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.28", features = ["test-util", "macros"] }
