[package]
name = "test-binaries"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntp-proto = { path = "../ntp-proto", features = ["ext-test"] }
ntp-udp = { path = "../ntp-udp" }
ntp-daemon = { path = "../ntp-daemon" }
ntp-os-clock = { path = "../ntp-os-clock" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
clap.workspace = true
aes-siv.workspace = true

rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
webpki.workspace = true
tokio-rustls = "0.23.4"
