[package]
name = "test-binaries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntp-proto = { workspace = true, features = ["ext-test"] }
ntp-udp.workspace = true
ntp-daemon.workspace = true
ntp-os-clock.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
clap.workspace = true
aes-siv.workspace = true

rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
webpki.workspace = true
