[package]
name = "test-binaries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false

[package.metadata.release]
release = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntp-proto = { workspace = true, features = ["__internal-test"] }
ntp-udp.workspace = true
ntp-os-clock.workspace = true

tokio.workspace = true
tracing.workspace = true
aes-siv.workspace = true

rustls.workspace = true
rustls-native-certs.workspace = true
rustls-pemfile.workspace = true
