[package]
name = "linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
fern = { version = "0.6.0", features = ["colored"] }
chrono = "0.4.19"
log = "0.4.14"
statime = { path = "../../statime" }
statime-linux = { path = "../../statime-linux" }
tokio = { version = "1.25", features = ["full"] }
